update the CSS to fix the Nav spacing issues (someone added some crazy margin so I got rid of it)

--- a/styles/_header-footer.scss
+++ b/styles/_header-footer.scss
@@ -86,6 +86,7 @@
 		float: none;
 		
 		li {
+			margin-bottom: 0px;
 			text-align: center;
 			display: table;
 			border-left: #a0a0a0 solid 1px;
